tests/sources/invalid/strings/string_method_errors.fire
// String method errors: wrong argument count for `length`, and an unknown
// string method name.
fn wrongArgCount() -> int32 {
    s: string = "abc";
    x: int32 = s.length(1);  //~ ERROR FS-SEM-0010 @18
    return x;
}

fn main() -> int32 {
    s: string = "abc";
    x: int32 = s.foo();  //~ ERROR FS-SEM-0010 @18
    return x;
}
